public enum Mode
{
	Instant,
	TypeOut
}