@startuml
'Green is a struct'

hide empty members

class DialogueManager<<M, yellow>>{
    +ui : canvas 
    +isRunning : bool
    +event action DialogueStart
    +event action DialogueEnd
    +Event action<string> ChoiceMade
    -name : TextMeshPro
    -text : TextMeshPro
    -portrait : Image
    -backgroundView : Image
    -textBackground : Image
    +void StartDialogue(Dialogue dialogueToSet)
    +void StopDialogue()
    -void ShowButton()
    -void PressButton()
    -void NextDialoguePiece()
    -void Skip()
    -void PlayLetterSound()
    -void PlaySound()
    -void PlayBackgroundSound()
}

class Dialogue<<S, red>>{
    +pieces : DialoguePiece[]
    +choices : list<Choice>
    +mode : Mode
}

class Actor<<S, red>>{
    +name : string
    +reaction : List<Reaction>
}

class DialoguePiece<<S, red>>{
    +actor : Actor
    +reactions : Reaction
    +text : string
    +soundForLetter : Sound
    +sound : Sound
    +backgroundSound : Sound
    +speed : float
}

class Mode<<S, red>>{
    +Instant
    +TypeOut
}

Class Choice<<S, green>>{
    +choiceName : list<string>
    +dialogue : Dialogue
    
}

Class Reaction<<S, red>>{
    Neutral
    Happy
    Sad    
    Angry
}

DialogueManager *-- Dialogue
Dialogue *-- DialoguePiece
DialoguePiece - Actor
Dialogue - Mode
Dialogue -- Choice
DialoguePiece -- Reaction
Actor -- Reaction

@enduml